# Compliment

./: CMakeLists.txt
inc/base/: angle.h  basicTypes.h  basicoperations.h  shape.h
inc/color/colorSetters/: IttentGradientColorSetter.h
inc/color/gradient/: IttenGradientCreator.h  conditionDefiner.h  conditionExecutor.h  conditions.h  gradientCreator.h  intervalConditions.h  intervalConditionsFactories.h  intervalСonditions.h  shifterToRelativeAngleValues.h
inc/complimentWidgets/: circle.h  colorIndicator.h  donat.h
inc/shape/creators/: diskCreator.h  donatCreator.h  filler.h  lineCreator.h  shapeCreator.h
inc/shape/shapes/: disk.h  donat.h
src/: main.cpp
src/base/: angle.cpp  basicTypes.cpp  basicoperations.cpp  shape.cpp
src/color/colorSetters/: IttentGradientColorSetter.cpp
src/color/gradient/: IttenGradientCreator.cpp  conditionDefiner.cpp  conditionExecutor.cpp  conditions.cpp  gradientCreator.cpp  intervalConditions.cpp  intervalConditionsFactories.cpp  shifterToRelativeAngleValues.cpp
src/complimentWidgets/: circle.cpp  colorIndicator.cpp  donat.cpp
src/shape/creators/: diskCreator.cpp  donatCreator.cpp  filler.cpp  lineCreator.cpp  shapeCreator.cpp
src/shape/shapes/: disk.cpp  donat.cpp
tests/: test_angle.cpp  test_conditonExecutor.cpp  test_main.cpp  test_shifterToRelative.cpp
